app/assets/stylesheets/cats.css.scss
h1 {
  font-family: "grand-hotel";
  text-align: center;
  font-size: 138px;
  margin-top: 178px;
  margin-bottom: 29px;
  color: #FBA383;
}

p {
  font-family: "ostrich-sans";
  text-align: center;
  font-size: 34px;
  margin-bottom: 29px;
  font-weight: bold;
}

.caption {
  max-width: 850px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.show-title {
  margin-top: 21px;
  margin-bottom: 21px;
}

.cat-photo {
  max-height: 433px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.image-div {
  margin-bottom: 23px;
}

.kitty-button {
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-image:url(kitty-sprite.png);
  background-repeat:no-repeat;
  display:block;
  height:121px;
  width:125px;
  &:hover {
    background-position: 0 -119px;
  }
}

.next-link {
  float: right;
  margin-right: 40px;
}

.prev-link {
  float: left;
  margin-left: 40px;
}

.home-button {
  position: absolute;
  bottom: 3px;
  left: 43px;
  background-size: 51px 95px;
  height: 48px;
  width: 52px;

  &:hover {
    background-position: 0 -48px;
  }

  a {
    position: absolute;
    font-size: 22px;
    top: 51px;
    right: -7px;
    width: 63px;
  }
}

.about-link {
  position: absolute;
  bottom: 3px;
  left: 43px;
  font-size: 22px;
}

